添加CMS运行记录